--- a/blank.html
+++ b/blank.html
@@ -16,14 +16,15 @@
 <body class="page-body">
 
   <header class="main-header">
-    <nav class="main-navigation">
+
+    <nav class="main-navigation center">
       <a class="main-header-logo">
         <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
       <ul class="site-navigation">
         <li><a href="index.html">Студия</a></li>
         <li><a href="blank.html">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
       </ul>
       <!-- Тут иконка для корзины -->
@@ -31,6 +32,7 @@
         <li><a class="cart-icon" href="blank.html">Корзина</a></li>
       </ul>
     </nav>
+
   </header>
 
   <main>
@@ -43,35 +45,43 @@
       <h2 class="visually-hidden">Контакты</h2>
       <!-- Здесь будет карта -->
       <img src="img/png/map.png" alt="" width="1440" height="416">
-      <p class="contacts-title">NЁRDS DESIGN STUDIO</p>
-      <p class="contacts-address">
-        наб. Реки Карповки, 5 лит П, Санкт-Петербург
-      </p>
-      <p>
-        <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-      </p>
-      <button class="button" type="button">Напишите нам</button>
+      <div class="center">
+        <div class="contacts-info">
+          <p class="contacts-title">NЁRDS DESIGN STUDIO</p>
+          <p class="contacts-address">
+            наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
+          </p>
+          <p>
+            <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+          </p>
+          <button class="button" type="button">Напишите нам</button>
+        </div>
+      </div>
     </section>
 
-    <section class="social">
+    <section class="social center">
       <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <ul class="social-list">
-        <li>
-          <a class="social-button" href="blank.html"><span class="visually-hidden">Вконтакте</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="blank.html"><span class="visually-hidden">Фейсбук</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="blank.html"><span class="visually-hidden">Инстаграм</span></a>
-        </li>
-      </ul>
-      <p class="social-title">Давайте дружить, это выгодно!</p>
-      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+      <div class="social-network">
+        <ul class="social-list">
+          <li>
+            <a class="social-button" href="blank.html"><span class="visually-hidden">Вконтакте</span></a>
+          </li>
+          <li>
+            <a class="social-button" href="blank.html"><span class="visually-hidden">Фейсбук</span></a>
+          </li>
+          <li>
+            <a class="social-button" href="blank.html"><span class="visually-hidden">Инстаграм</span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="social-info">
+        <p class="social-title">Давайте дружить, это выгодно!</p>
+        <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+      </div>
     </section>
   </footer>
 
-  <section class="modal">
+  <section class="modal center">
     <h2>Напишите нам</h2>
     <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
       <div class="modal-item">
