--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <body class="page-body">
 
   <header class="main-header">
-    <nav class="main-navigation">
+
+    <nav class="main-navigation center">
       <a class="main-header-logo">
         <img src="img/svg/nerds-logo.svg" width="160" height="66" alt="">
       </a>
       <ul class="site-navigation">
-        <li class="site-navigation-current"><a href="index.html">Студия</a></li>
+        <li><a href="index.html">Студия</a></li>
         <li><a href="blank.html">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
@@ -31,16 +32,14 @@
         <li><a class="cart-icon" href="blank.html">Корзина</a></li>
       </ul>
     </nav>
-
     <h1 class="visually-hidden">Дизайн-студия «Нёрдс»</h1>
-
-    <section class="slider">
+    <section class="slider center">
       <h2 class="visually-hidden">Преимущества</h2>
       <!-- Тут ниже слайдер -->
       <ul class="slider-list">
         <li class="slider-item">
           <h3>Долго, дорого, скрупулезно.</h3>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
           <a class="button" href="blank.html">Узнать больше</a>
         </li>
         <li class="slider-item">
@@ -50,7 +49,7 @@
         </li>
         <li class="slider-item">
           <h3>Только ночь, только хардкор</h3>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
           <a class="button" href="blank.html">Узнать больше</a>
         </li>
       </ul>
@@ -62,87 +61,85 @@
     </section>
   </header>
 
-  <main class="container">
+  <main class="center">
     <section class="services">
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
+          <img src="img/png/illustration-1.png" width="300" height="146" alt="">
           <h3>Веб-сайты</h3>
-          <p>
-            <img src="img/png/illustration-1.png" alt="" width="300" height="146">
-          </p>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
           <a class="button" href="blank.html">Заказать</a>
         </li>
         <li class="services-item">
+          <img src="img/png/illustration-2.png" width="300" height="146" alt="">
           <h3>Приложения</h3>
-          <p>
-            <img src="img/png/illustration-2.png" alt="" width="300" height="146">
-          </p>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
           <a class="button button-green" href="blank.html">Заказать</a>
         </li>
         <li class="services-item">
+          <img src="img/png/illustration-3.png" width="300" height="146" alt="">
           <h3>Презентации</h3>
-          <p>
-            <img src="img/png/illustration-3.png" alt="" width="300" height="146">
-          </p>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
           <a class="button button yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
 
     <section class="about-us">
-      <h2 class="visually-hidden">О студии</h2>
-      <p class="about-us-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-      <p class="about-us-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
-        Работаем не покладая
-        рук, как роботы.</p>
-      <p class="about-us-list-title">Выполняем заказы на разработку:</p>
-      <ul class="about-us-list">
-        <li>Веб-сайтов любой сложности</li>
-        <li>Мобильных приложений для iOS и Android</li>
-        <li>Слайдшоу и видео для корпоративных презентаций</li>
-      </ul>
-      <h3 class="visually-hidden">Наша статистика</h3>
-      <img src="img/jpg/nerds-illustration.jpg" alt="" width="360" height="208">
-      <table class="about-us-table">
-        <caption>с 2004 года Любим точность во всем:</caption>
-        <tr>
-          <td>146<sup>%</sup></td>
-          <td>100<sup>%</sup></td>
-          <td>50<sup>%</sup></td>
-        </tr>
-        <tr>
-          <th>Уровень самоотдачи</th>
-          <th>Соблюдение сроков</th>
-          <th>Минимальная предоплата</th>
-        </tr>
-      </table>
+      <div class="about-us-description">
+        <h2 class="visually-hidden">О студии</h2>
+        <p class="about-us-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p class="about-us-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше
+          креатива. Работаем не покладая
+          рук, как роботы.</p>
+        <p class="about-us-list-title">Выполняем заказы на разработку:</p>
+        <ul class="about-us-list">
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </div>
+      <div class="about-us-statistics">
+        <h3 class="visually-hidden">Наша статистика</h3>
+        <img src="img/jpg/nerds-illustration.jpg" width="360" height="208" alt="">
+        <table class="about-us-table">
+          <caption>с 2004 года Любим точность во всем:</caption>
+          <tr>
+            <td>146<sup>%</sup></td>
+            <td>100<sup>%</sup></td>
+            <td>50<sup>%</sup></td>
+          </tr>
+          <tr>
+            <th>Уровень самоотдачи</th>
+            <th>Соблюдение сроков</th>
+            <th>Минимальная предоплата</th>
+          </tr>
+        </table>
+      </div>
     </section>
 
     <section class="partners">
       <h2 class="visually-hidden">Партнеры</h2>
       <ul class="partners-list">
-        <li class="partners-list-item">
+        <li class="partners-list-item logo-htmlacademy">
           <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-            <img src="img/svg/logo-htmlacademy.svg" alt="" width="199" height="58">
+            <img src="img/svg/logo-htmlacademy.svg" width="199" height="58" alt="">
           </a>
         </li>
-        <li class="partners-list-item">
+        <li class="partners-list-item logo-borodinski">
           <a href="blank.html">
-            <img src="img/png/logo-borodinski.png" alt="" width="209" height="90">
+            <img src="img/png/logo-borodinski.png" width="209" height="90" alt="">
           </a>
         </li>
-        <li class="partners-list-item">
+        <li class="partners-list-item logo-pink">
           <a href="blank.html">
-            <img src="img/png/logo-pink.png" alt="" width="185" height="52">
+            <img src="img/png/logo-pink.png" width="185" height="52" alt="">
           </a>
         </li>
-        <li class="partners-list-item">
+        <li class="partners-list-item logo-mishka">
           <a href="blank.html">
-            <img src="img/png/logo-mishka.png" alt="" width="173" height="84">
+            <img src="img/png/logo-mishka.png" width="173" height="84" alt="">
           </a>
         </li>
       </ul>
@@ -155,35 +152,43 @@
       <h2 class="visually-hidden">Контакты</h2>
       <!-- Здесь будет карта -->
       <img src="img/png/map.png" alt="" width="1440" height="416">
-      <p class="contacts-title">NЁRDS DESIGN STUDIO</p>
-      <p class="contacts-address">
-        наб. Реки Карповки, 5 лит П, Санкт-Петербург
-      </p>
-      <p>
-        <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-      </p>
-      <button class="button" type="button">Напишите нам</button>
+      <div class="center">
+        <div class="contacts-info">
+          <p class="contacts-title">NЁRDS DESIGN STUDIO</p>
+          <p class="contacts-address">
+            наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
+          </p>
+          <p>
+            <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+          </p>
+          <button class="button" type="button">Напишите нам</button>
+        </div>
+      </div>
     </section>
 
-    <section class="social">
+    <section class="social center">
       <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <ul class="social-list">
-        <li>
-          <a class="social-button" href="blank.html"><span class="visually-hidden">Вконтакте</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="blank.html"><span class="visually-hidden">Фейсбук</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="blank.html"><span class="visually-hidden">Инстаграм</span></a>
-        </li>
-      </ul>
-      <p class="social-title">Давайте дружить, это выгодно!</p>
-      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+      <div class="social-network">
+        <ul class="social-list">
+          <li>
+            <a class="social-button" href="blank.html"><span class="visually-hidden">Вконтакте</span></a>
+          </li>
+          <li>
+            <a class="social-button" href="blank.html"><span class="visually-hidden">Фейсбук</span></a>
+          </li>
+          <li>
+            <a class="social-button" href="blank.html"><span class="visually-hidden">Инстаграм</span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="social-info">
+        <p class="social-title">Давайте дружить, это выгодно!</p>
+        <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+      </div>
     </section>
   </footer>
 
-  <section class="modal">
+  <section class="modal center">
     <h2>Напишите нам</h2>
     <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
       <div class="modal-item">
